--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -24,9 +24,10 @@ h4 {
 /*Custome design with class*/
 
 .banner {
-  background-image: url("http://unsplash.it/1920/270");
+  background-image: url(cover-photo.JPG);
+  background-position: center bottom;
   background-size: cover;
-  color: white;
+  color: white;z
   padding: 150px 0;
   text-align: center;
 }
