--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -21,19 +21,31 @@ h4 {
   color: #7C7C7C;
 }
 
+h5 {
+  line-height: 1.5;
+}
+
 /*Custome design with class*/
 
 .banner {
   background-image: url(cover-photo.JPG);
   background-position: center bottom;
   background-size: cover;
-  color: white;z
+  color: white;
   padding: 150px 0;
-  text-align: center;
+  margin-bottom: 20px;
+  text-align: left;
+  position: relative;
+  height: 60vh;
+}
+.sit {
+  position: absolute;
+  bottom: 10px;
 }
 
 .banner h1 {
   font-size: 38;
+  bottom: 10px;
 }
 
 .banner p {
@@ -48,14 +60,15 @@ h4 {
   color: #8A8A8A;
   font-size: 20px;
   font-style: italic;
-  font-weight: lighter;
+  font-weight: normal;
 }
 
 .link:hover {
   background-image: linear-gradient(to bottom, rgba(125, 255, 179, 1), rgba(125, 255, 179, 1));
+  text-decoration: none;
 }
 
-.container {
+/* .container {
   margin: 100px auto;
 }
 
@@ -73,4 +86,4 @@ h4 {
   .container {
     width: 700px;
   }
-}
+} */
