--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -11,10 +11,12 @@
 <div class="col-sm-12"><h4>Experience</h4></div>
 
   <div class="col-sm-12 col-md-6 col-lg-4">
-    <h3>Le Wagon</h3>
-    <h6>2017</h6>
-    <h5>Co-founder of HUBERT</h5>
-    <p>In team of 4 people with no coding background designed, implemented and shipped to production <a href="http://www.hubert-cooks.com/" class="link">HUBERT</a>, a Rails cooking planner web-app.</p>
+    <div class="card">
+      <h3>Le Wagon</h3>
+      <h6>2017</h6>
+      <h5>Co-founder of HUBERT</h5>
+      <p>In team of 4 people with no coding background designed, implemented and shipped to production <a href="http://www.hubert-cooks.com/" class="link">HUBERT</a>, a Rails cooking planner web-app.</p>
+    </div>
   </div>
 
   <div class="col-sm-12 col-md-6 col-lg-4">
