--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -20,17 +20,21 @@
   </div>
 
   <div class="col-sm-12 col-md-6 col-lg-4">
-    <h3>Prince’s Trust Million Makers</h3>
-    <h6>2015</h6>
-    <h5>Team Treasurer</h5>
-    <p>An entrepreneurial fund raising project held by the Institute of Directors. Teams of five are given one month to generate fund raising event ideas, prepare a business plan, and implement them over the month of February.</p>
+    <div class="card">
+      <h3>Prince’s Trust Million Makers</h3>
+      <h6>2015</h6>
+      <h5>Team Treasurer</h5>
+      <p>An entrepreneurial fund raising project held by the Institute of Directors. Teams of five are given one month to generate fund raising event ideas, prepare a business plan, and implement them over the month of February.</p>
+    </div>
   </div>
 
   <div class="col-sm-12 col-md-6 col-lg-4">
-    <h3>Baralan International Ltd</h3>
-    <h6>2012</h6>
-    <h5>Marketing Assistant Internship</h5>
-    <p>Assisted in the re-making of the company product catalogue, involved extensive work with excel spreadsheets. Developed communication skills by regularly reporting to the manager. Gained insight to the interpersonal qualities involved in a family business.</p>
+    <div class="card">
+      <h3>Baralan International Ltd</h3>
+      <h6>2012</h6>
+      <h5>Marketing Assistant Internship</h5>
+      <p>Assisted in the re-making of the company product catalogue, involved extensive work with excel spreadsheets. Developed communication skills by regularly reporting to the manager. Gained insight to the interpersonal qualities involved in a family business.</p>
+    </div>
   </div>
 
 </div>
@@ -39,43 +43,53 @@
 <div class="col-sm-12"><h4>Education and Qualifications</h4></div>
 
   <div class="col-sm-12 col-md-6 col-lg-3">
+    <div class="card">
     <h3>Le Wagon</h3>
     <h6>2017</h6>
     <h5>9-week intensive coding boot camp learning HTML, CSS, Bootstrap, JavaScript, jQuery, SQL, git, Github, Heroku and Ruby on Rails</h5>
+    </div>
   </div>
 
   <div class="col-sm-12 col-md-6 col-lg-3">
+    <div class="card">
     <h3>Nottingham Trent University</h3>
     <h6>2016</h6>
     <h5>Awarded Second Class Honours in BA(Hons) Business (direct entry to 2nd year) with CMI Level 5 Certificate – Management and Leadership (QCF)</h5>
 <!--         <p>
     Numeracy training through Survey Resources and Analytics for Business module Understanding of financial mechanisms through Financial Environment module Greater awareness of people management through Managing and Organising for Human Resources module
     </p> -->
+    </div>
   </div>
 
   <div class="col-sm-12 col-md-6 col-lg-3">
+    <div class="card">
     <h3>University of Hull</h3>
     <h6>2014</h6>
     <h5>Awarded Second Upper Class in BA(Hons) Business and Financial Management</h5>
 <!--         <p>71% (1 st Class) Finance and Accounting</p>
     <p>70% (1 st Class) Marketing</p> -->
+    </div>
   </div>
 
   <div class="col-sm-12 col-md-6 col-lg-3">
+    <div class="card">
     <h3>International School of Milan</h3>
     <h6>2013</h6>
     <h5>International Baccalaureate Diploma (30 Points out of 45)</h5>
 <!--         <p>At higher level: English Language and Literature, Business and Management, Art</p>
     <p>At standard level: Physics, Italian, Maths Studies</p> -->
+    </div>
   </div>
 
 </div>
 
 <div class="container">
   <div class="col-sm-12">
-    <h4>Personal Profile</h4>
-    <p>
-      Enthusiastic team player, worked in a team to design, implement and ship to production a clone of AirBnB and a Rails cooking planner web-app called HUBERT in 10 days. Holds strong analytical skills, is IT savvy, and is comfortable with high numeracy demands; scored firsts on maths related exams at university. Possesses a creative mind, is self-motivated and prioritises attention to detail and presentability. Was team treasurer for a Prince’s Trust fund raising project held by the Institute of Directors. Completed a Marketing internship at Baralan International Ltd in Milan.
-    </p>
+      <h4>Personal Profile</h4>
+    <div class="card">
+      <p>
+        Enthusiastic team player, worked in a team to design, implement and ship to production a clone of AirBnB and a Rails cooking planner web-app called HUBERT in 10 days. Holds strong analytical skills, is IT savvy, and is comfortable with high numeracy demands; scored firsts on maths related exams at university. Possesses a creative mind, is self-motivated and prioritises attention to detail and presentability. Was team treasurer for a Prince’s Trust fund raising project held by the Institute of Directors. Completed a Marketing internship at Baralan International Ltd in Milan.
+      </p>
+    </div>
   </div>
 </div>
