--- a/app/assets/stylesheets/components/_card.scss
+++ b/app/assets/stylesheets/components/_card.scss
@@ -2,12 +2,17 @@
   box-shadow: 0 1px 5px 0 rgba(0,0,0,0.07),0 1px 0 0 rgba(0,0,0,0.03);
   background: white;
   transition: all 0.3s ease;
-  text-shadow: 0 1px 3px rgba(0,0,0,0.6);
+  // text-shadow: 0 1px 3px rgba(0,0,0,0.6);
   background-size: cover !important;
   background-position: center;
   padding: 10px;
   border-radius: 4px;
   position: relative;
+  opacity: 0.8;
+  margin-bottom: 10px;
+}
+.card:hover {
+  opacity: 0.9;
 }
 .card-user {
   position: absolute;
