crazy details animation credits to HIMA VINCENT

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,9 +1,10 @@
 <div class="banner">
-  <div class="container list-inline">
-    <ul class="col-sm-12 list-inline sit">
-      <li><h1>Chamindu Salman</h1></li>
-      <li><p>Software Engineer</p></li>
-    </ul>
+  <div class="container">
+    <div class="col-sm-12 sit">
+      <div class="titleWrapper">
+          <div class="col-sm-12"><h1 class="first">Chamindu Salman</h1> <h1 class="second">Software Engineer</h1></div>
+      </div>
+    </div>
   </div>
 </div>
 
