done a little more than cards, sorted out excess space caused by the textswapper and avatar pulsing

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,11 +1,21 @@
 <div class="banner">
   <div class="container">
-    <div class="col-sm-12 sit">
+    <div class="col-sm-8 sit">
       <div class="titleWrapper">
-          <div class="col-sm-12"><h1 class="first">Chamindu Salman</h1> <h1 class="second">Software Engineer</h1></div>
+
+          <h1 class="first">Chamindu Salman</h1>
+
+          <h1 class="second">Software Engineer</h1>
+
       </div>
     </div>
   </div>
+</div>
+
+<div class="container av">
+    <div class="avatar">
+      <img src="https://avatars1.githubusercontent.com/u/26670588?v=4&s=460">
+    </div>
 </div>
 
 <div class="container">
