--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -26,6 +26,9 @@ h5 {
 }
 
 /*Custome design with class*/
+.av {
+  height: 40vh;
+}
 
 .banner {
   background-image: url(cover-photo.JPG);
@@ -67,23 +70,3 @@ h5 {
   background-image: linear-gradient(to bottom, rgba(125, 255, 179, 1), rgba(125, 255, 179, 1));
   text-decoration: none;
 }
-
-/* .container {
-  margin: 100px auto;
-}
-
-@media(min-width: 320px){
-  .container {
-    width: 300px;
-  }
-}
-@media(min-width: 768px){
-  .container {
-    width: 500px;
-  }
-}
-@media(min-width: 900px){
-  .container {
-    width: 700px;
-  }
-} */
