small textswapper space adjustment

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,7 +1,7 @@
 <div class="banner">
   <div class="container">
     <div class="col-sm-8 sit">
-      <div class="titleWrapper">
+      <div class="titleWrapper container">
 
           <h1 class="first">Chamindu Salman</h1>
 
