Prepare for Heroku

--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -31,7 +31,7 @@ h5 {
 }
 
 .banner {
-  background-image: url(cover-photo.JPG);
+  background-image: url("http://oi68.tinypic.com/34ipzf4.jpg");
   background-position: center bottom;
   background-size: cover;
   color: white;
