--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,4 +1,5 @@
-<div class="banner">
+<div class="banner" alt="Cover Photo">
+
   <div class="container">
     <div class="col-sm-10 sit">
       <div class="titleWrapper container">
