--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,16 +1,29 @@
 <div class="banner" alt="Cover Photo">
 
-  <div class="container">
+  <div class="container hidden-xs hidden-sm hidden-md">
     <div class="col-sm-10 sit">
       <div class="titleWrapper container">
 
           <h1 class="first">Chamindu Salman</h1>
 
-          <h1 class="second">Software Engineer</h1>
+          <h1 class="second">Software Developer</h1>
 
       </div>
     </div>
   </div>
+
+  <div class="container  hidden-lg">
+    <div class="col-sm-12 sit">
+      <ul class="container list-inline">
+
+      <li><h1>Chamindu Salman</h1></li>
+
+      <li><p>Software Developer</p></li>
+
+      </ul>
+    </div>
+  </div>
+
 </div>
 
 <div class="container av">
