changed profession from software engineer to web developer to enhance textswapper animation

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -6,7 +6,7 @@
 
           <h1 class="first">Chamindu Salman</h1>
 
-          <h1 class="second">Software Developer</h1>
+          <h1 class="second">Web Developer</h1>
 
       </div>
     </div>
@@ -18,7 +18,7 @@
 
       <li><h1>Chamindu Salman</h1></li>
 
-      <li><p>Software Developer</p></li>
+      <li><p>Web Developer</p></li>
 
       </ul>
     </div>
