adjusted avatar section screen space to include contact details

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -26,13 +26,14 @@
 
 </div>
 
-<div class="container screen40">
+<div class="container avatarspace">
     <div class="avatar">
       <img src="https://avatars1.githubusercontent.com/u/26670588?v=4&s=460">
     </div>
-      <h6> </h6>
-      <h6>chamindu07@gmail.com +447440422281</h6>
-      <h6>111 Coleman Road, London</h6>
+
+    <h6> </h6>
+    <h6>chamindu07@gmail.com +447440422281</h6>
+    <h6>111 Coleman Road, London</h6>
 
 </div>
 
