--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -31,7 +31,7 @@ ul, .list-inline {
 }
 
 /*Custome design with class*/
-.screen40 {
+.avatarspace {
   height: 40vh;
   text-align: center;
 }
@@ -76,3 +76,13 @@ ul, .list-inline {
   background-image: linear-gradient(to bottom, rgba(125, 255, 179, 1), rgba(125, 255, 179, 1));
   text-decoration: none;
 }
+
+
+  @media(max-width: 768px){
+    .banner {
+      height: 50%;
+    }
+    .avatarspace {
+      height: 50%;
+    }
+  }
