--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -80,9 +80,11 @@ ul, .list-inline {
 
   @media(max-width: 768px){
     .banner {
-      height: 50%;
+      height: 50vh;
     }
+  }
+  @media(max-width: 768px){
     .avatarspace {
-      height: 50%;
+      height: 50vh;
     }
   }
