Prepare for Heroku

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -32,7 +32,7 @@
     </div>
 
     <h6>chamindu07@gmail.com +447440422281</h6>
-    <h6>111 Coleman Road, London</h6>
+    <h6>111 Coleman Road, London SE5 7TF</h6>
 
 </div>
 
