--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -5,6 +5,9 @@
     <link href="https://fonts.googleapis.com/css?family=Lora:400,400i,700|Montserrat:500,600" rel="stylesheet">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <title>Chamindu Salman</title>
+
+    <%= favicon_link_tag 'https://avatars1.githubusercontent.com/u/26670588?v=4&s=460' %>
+
     <%= csrf_meta_tags %>
     <%= action_cable_meta_tag %>
     <%= stylesheet_link_tag 'application', media: 'all'  %>
