Prepare for Heroku

--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -30,6 +30,10 @@ h5 {
 /*Custome design with class*/
 .avatarspace {
   height: 40vh;
+  margin-bottom: 60px;
+}
+
+.centered {
   text-align: center;
 }
 
