--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -26,7 +26,7 @@
 
 </div>
 
-<div class="container avatarspace">
+<div class="container centered avatarspace">
     <div class="avatar">
       <img src="https://avatars1.githubusercontent.com/u/26670588?v=4&s=460">
     </div>
@@ -37,23 +37,39 @@
 </div>
 
 <div class="container">
+  <div class="col-sm-12">
+      <h4>Personal Profile</h4>
+    <div class="card">
+      <p>
+        Enthusiastic team player, worked in a team to design, implement and ship to production a clone of AirBnB and a Rails cooking planner web-app called HUBERT in 10 days. Holds strong analytical skills, is IT savvy, and is comfortable with high numeracy demands; scored firsts on maths related exams at university. Possesses a creative mind, is self-motivated and prioritises attention to detail and presentability. Was team treasurer for a Prince’s Trust fund raising project held by the Institute of Directors. Completed a Marketing internship at Baralan International Ltd in Milan.
+      </p>
+    </div>
+  </div>
+</div>
+
+<div class="container">
 <div class="col-sm-12"><h4>Experience</h4></div>
 
   <div class="col-sm-12 col-md-6 col-lg-4">
     <div class="card">
-      <h3>Le Wagon</h3>
+      <h3>HUBERT</h3>
       <h6>2017</h6>
-      <h5>Co-founder of HUBERT</h5>
-      <p>In team of 4 people with no coding background designed, implemented and shipped to production <a href="http://www.hubert-cooks.com/" class="link">HUBERT</a>, a Rails cooking planner web-app.</p>
+      <h5>Co-founder of <a href="http://www.hubert-cooks.com/" class="link">HUBERT</a></h5>
+      <h5>& Front End Developer</h5>
+      <p>Designing website using HTML and CSS to create an eye-catching effect.
+      <p>Designing swipe animation feature for the meals planner using JavaScript, jQuery and Ajax.</p>
+      <p>Programming a scraper, that scrapes from pages of lists of recipes including thumbnail and full-size image of the dish, cooking time, difficulty, title, ingredients and description, a Rails cooking planner web-app.</p>
     </div>
   </div>
 
   <div class="col-sm-12 col-md-6 col-lg-4">
     <div class="card">
-      <h3>Prince’s Trust Million Makers</h3>
+      <h3>Prince’s Trust Million Makers fundraising project</h3>
       <h6>2015</h6>
       <h5>Team Treasurer</h5>
-      <p>An entrepreneurial fund raising project held by the Institute of Directors. Teams of five are given one month to generate fund raising event ideas, prepare a business plan, and implement them over the month of February.</p>
+      <p>Proposed two event ideas out of the chosen four for Prince’s Trust fund raising project including a charity club night and a charity zombie run.</p>
+      <p>Drawing on Excel three breakeven charts with different levels of pricing.</p>
+      <p>Selling pastries and cookies to students and lecturers at the entrance of Nottingham Boots Library.</p>
     </div>
   </div>
 
@@ -62,7 +78,9 @@
       <h3>Baralan International Ltd</h3>
       <h6>2012</h6>
       <h5>Marketing Assistant Internship</h5>
-      <p>Assisted in the re-making of the company product catalogue, involved extensive work with excel spreadsheets. Developed communication skills by regularly reporting to the manager. Gained insight to the interpersonal qualities involved in a family business.</p>
+      <p>Leading the re-making of the company product catalogue, involved extensive work with excel spreadsheets.</p>
+      <p>Developed communication skills by regularly reporting to the manager.</p>
+      <p>Gained insight to the interpersonal qualities involved in a family business.</p>
     </div>
   </div>
 
@@ -109,16 +127,43 @@
     <p>At standard level: Physics, Italian, Maths Studies</p> -->
     </div>
   </div>
-
 </div>
 
 <div class="container">
-  <div class="col-sm-12">
-      <h4>Personal Profile</h4>
-    <div class="card">
-      <p>
-        Enthusiastic team player, worked in a team to design, implement and ship to production a clone of AirBnB and a Rails cooking planner web-app called HUBERT in 10 days. Holds strong analytical skills, is IT savvy, and is comfortable with high numeracy demands; scored firsts on maths related exams at university. Possesses a creative mind, is self-motivated and prioritises attention to detail and presentability. Was team treasurer for a Prince’s Trust fund raising project held by the Institute of Directors. Completed a Marketing internship at Baralan International Ltd in Milan.
-      </p>
+<div class="col-sm-12"><h4>Skills Profile</h4></div>
+
+    <div class="col-sm-12">
+      <div class="card">
+        <h3>Teamwork Skills</h3>
+
+        <p>Capable of adapting to demanding team environments, HUBERT was designed, implemented and shipped to production in the space of 10 long intense days, by a team of 4 individuals with no prior web development knowledge.</p>
+        <p>Strong contributor to the team, in the final year at Nottingham Trent University scored 81% (1 st Class) on the Leadership & Employability team project; worked with Baldwins Accounting to write up an action plan to achieve the iiE environment accreditation. Produced payback period to compare a green car’s efficiency to their company car.</p>
+
+      </div>
     </div>
-  </div>
+
+    <div class="col-sm-12 col-md-6">
+      <div class="card">
+        <h3>Numeracy Skills</h3>
+
+        <p>In the first semester at Nottingham Trent University scored 81% (1 st Class) on the Minitab 17 (a statistics package) exam in Survey and Research Analysis for Business module.</p>
+        <p>At University of Hull scored 86% (1st Class) on the Quantitative Methods exam in Academic and Professional Skills module.</p>
+
+      </div>
+    </div>
+
+    <div class="col-sm-12 col-md-6">
+      <div class="card">
+        <h3>Language & Cultural Awareness</h3>
+
+        <p>Fluent in English knows Italian, Sinhalese and Spanish.</p>
+        <p>Attended an international school from grade two; enjoyed interacting with individuals from diverse cultural backgrounds.</p>
+
+      </div>
+    </div>
+
+</div>
+
+<div class="container centered">
+<div class="col-sm-12"><h4>References are available upon request</h4></div>
 </div>
